--- a/mmfplanner/src/main/java/no/ntnu/mmfplanner/ui/AboutDialog.form
+++ b/mmfplanner/src/main/java/no/ntnu/mmfplanner/ui/AboutDialog.form
@@ -27,10 +27,21 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="titleLabel" alignment="0" pref="437" max="32767" attributes="0"/>
                   <Component id="descLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="closeButton" alignment="1" min="-2" max="-2" attributes="1"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Component id="titleLabel" min="-2" pref="323" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="ntnuLogoLabel" min="-2" pref="100" max="-2" attributes="1"/>
+                          <Component id="iterateLogoLabel" min="-2" pref="100" max="-2" attributes="1"/>
+                      </Group>
+                  </Group>
               </Group>
+              <EmptySpace max="-2" attributes="0"/>
+          </Group>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace pref="380" max="32767" attributes="0"/>
+              <Component id="closeButton" min="-2" pref="80" max="-2" attributes="1"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -41,9 +52,16 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="descLabel" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="titleLabel" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="32767" attributes="0"/>
-              <Component id="closeButton" min="-2" pref="25" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <Component id="iterateLogoLabel" min="-2" pref="33" max="-2" attributes="1"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="ntnuLogoLabel" min="-2" pref="19" max="-2" attributes="1"/>
+                      <EmptySpace pref="92" max="32767" attributes="0"/>
+                      <Component id="closeButton" min="-2" pref="25" max="-2" attributes="0"/>
+                  </Group>
+                  <Component id="titleLabel" pref="183" max="32767" attributes="0"/>
+              </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -62,6 +80,34 @@
           <Font name="DejaVu Sans" size="24" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="MMF Planner"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="iterateLogoLabel">
+      <Properties>
+        <Property name="focusable" type="boolean" value="false"/>
+        <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[100, 33]"/>
+        </Property>
+        <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[100, 33]"/>
+        </Property>
+        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[100, 33]"/>
+        </Property>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="ntnuLogoLabel">
+      <Properties>
+        <Property name="focusable" type="boolean" value="false"/>
+        <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[100, 19]"/>
+        </Property>
+        <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[100, 19]"/>
+        </Property>
+        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[100, 19]"/>
+        </Property>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="closeButton">
